--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -342,10 +342,10 @@
                     <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Logotipos</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Logotipos</h2>
                         </div>
                         <p class="lead text-justify">Conocemos que esta es la parte más importante de su negocio, su imagen corporativa y creativa al mundo, Creativosplus logra encontrar su identidad con un diseño a la medida.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -362,7 +362,7 @@
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Identidad Corporativa</h2>
                         </div>
                         <p class="lead text-justify">Transmitimos por medio de componentes físicos y digitales el concepto de tu negocio, con tu identidad corporativa lograremos darle valor a tu marca.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -375,7 +375,7 @@
             </div>
         </div>
         <div class="clear"></div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding " style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="500" data-height-lg="500" data-height-md="450" data-height-sm="400" data-height-xs="600">
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding " style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="500" data-height-lg="500" data-height-md="450" data-height-sm="400" data-height-xs="500">
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="col-lg-7 offset-lg-5 ">
@@ -385,7 +385,7 @@
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos y Animación</h2>
                         </div>
                         <p class="lead">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
