--- a/diseno-web.html
+++ b/diseno-web.html
@@ -342,10 +342,10 @@
                     <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t500">Diseño Web para Empresas</h2>
+                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Diseño Web para Empresas</h2>
                         </div>
                         <p class="lead text-justify">Diseñamos y creamos presencia en internet de manera efectiva con tu imagen corporativa, teniendo en cuenta tus objetivos empresariales.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -362,7 +362,7 @@
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Tiendas Virtuales</h2>
                         </div>
                         <p class="lead text-justify">Llevamos tu tienda física al mundo online con las mejores opciones del mercado, no importa si tu empresa es pequeña o grande, creamos soluciones efectivas para tu negocio o empresa.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -375,17 +375,17 @@
             </div>
         </div>
         <div class="clear"></div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="600">
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url('images/3.jpg') left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="500">
             <div class="container clearfix">
                 <div class="row clearfix">
-                    <div class="col-lg-7 offset-lg-5">
+                    <div class="col-lg-6 offset-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Re-diseño Web</h2>
                         </div>
                         <p class="lead">Tener una buena imagen online es muy importante, CreativosPlus se encarga de darte la imagen innovadora que necesitas, con las mejores tecnologías del mercado.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
