--- a/trabajos.html
+++ b/trabajos.html
@@ -431,7 +431,7 @@
             <div class="container clearfix">
                 <div class="row s-normal">
                     <div class="col-lg-3 mt-3">
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
