--- a/marketing.html
+++ b/marketing.html
@@ -335,16 +335,16 @@
         <div class="container clearfix">
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6 center">
                         <img src="images/servicios/MARKETING/1.png" alt="Marketing digital" data-animate="fadeInLeft">
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t500">Campañas de Marketing</h2>
                         </div>
                         <p class="lead text-justify">Buscamos convertirnos en tu mejor aliado, con nosotros podrás encontrar todas las herramientas necesarias para que tu marca llegue a todos tus clientes potenciales a través de diferentes medios digitales.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
@@ -355,18 +355,18 @@
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Social Media</h2>
                         </div>
                         <p class="lead text-justify">Tus potenciales clientes están en la red, es por esto que tu marca debe estarlo también. CreativosPlus busca trasmitir el ADN de tu marca en las plataformas digitales más importantes, creando estrategias y anuncios de valor para posicionar tu marca y crear una comunidad activa.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
                     </div>
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6 center">
                         <img src="images/servicios/MARKETING/2.png" alt="Social media" data-animate="fadeInRight">
                     </div>
                 </div>
@@ -374,17 +374,17 @@
             </div>
         </div> 
         <div class="clear"></div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url('images/3.jpg') left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
-                    <div class="col-lg-7 offset-lg-5">
+                    <div class="col-lg-6 offset-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">Branding</h2>
                         </div>
                         <p class="lead">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <a class="btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </a>
