--- a/nosotros.html
+++ b/nosotros.html
@@ -425,7 +425,7 @@
                         <h2>Nuestra Misión</h2>
                   </div>
                   <p class="lead text-justify">Ayudar a las personas que confíen en nosotros a encontrar la <strong>identidad</strong> en su negocio y poder brindarle apoyo a cada persona a nivel internacional </p>
-                  <a class=" btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                  <a class=" btn-verde button button-3d button-reveal button-large tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                      <i class="icon-line-arrow-right"></i>
                      <span>Contáctanos</span>
                   </a>
