--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="nosotros.html">
+                            <a href="Conocenos/nosotros.html">
                                 <div>Nosotros</div>
                             </a>
                         </li>
