--- a/Conocenos/nosotros.html
+++ b/Conocenos/nosotros.html
@@ -25,7 +25,7 @@
    <link rel="icon" type="image/png" href="../images/logos/icono.png">
    <title>CreativosPlus | Conoce más sobre nosotros </title>
 
-   <link rel="canonical" href="https://www.creativosplus.com/Conocenos/"/>
+   <link rel="canonical" href="https://creativosplus.github.io/Creativos-Plu/Conocenos/"/>
 
    <meta property="og:type" content="website"/>
    <meta property="og:description" content=""/>
