--- a/nosotros.html
+++ b/nosotros.html
@@ -2,30 +2,30 @@
 <html dir="ltr" lang="es">
 <head>
    <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
-   <link rel="stylesheet" href="../css/animate.css" type="text/css">
-   <link rel="stylesheet" href="../css/bootstrap.css" type="text/css">
-   <link rel="stylesheet" href="../css/custom.css" type="text/css">
-   <link rel="stylesheet" href="../css/dark.css" type="text/css">
-   <link rel="stylesheet" href="../css/font-icons.css" type="text/css">
-   <link rel="stylesheet" href="../css/fonts.css" type="text/css">
-   <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
-   <link rel="stylesheet" href="../css/style.css" type="text/css">
-   <link rel="stylesheet" href="../css/swiper.css" type="text/css">
-   <link rel="stylesheet" href="../css/sweetalert2.min.css">
+   <link rel="stylesheet" href="css/animate.css" type="text/css">
+   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+   <link rel="stylesheet" href="css/custom.css" type="text/css">
+   <link rel="stylesheet" href="css/dark.css" type="text/css">
+   <link rel="stylesheet" href="css/font-icons.css" type="text/css">
+   <link rel="stylesheet" href="css/fonts.css" type="text/css">
+   <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
+   <link rel="stylesheet" href="css/swiper.css" type="text/css">
+   <link rel="stylesheet" href="css/sweetalert2.min.css">
    
-   <link rel="stylesheet" href="../css/responsive.css" type="text/css">
+   <link rel="stylesheet" href="css/responsive.css" type="text/css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-   <link rel="stylesheet" href="../rs-plugin/css/settings.css">
-   <link rel="stylesheet" href="../rs-plugin/css/layers.css">
-   <link rel="stylesheet" href="../rs-plugin/css/navigation.css">
-   <link rel="stylesheet" href="../rs-plugin/css/revolution.addon.particles.css">
-   <link rel="stylesheet" href="../rs-plugin/css/typewriter.css">
+   <link rel="stylesheet" href="rs-plugin/css/settings.css">
+   <link rel="stylesheet" href="rs-plugin/css/layers.css">
+   <link rel="stylesheet" href="rs-plugin/css/navigation.css">
+   <link rel="stylesheet" href="rs-plugin/css/revolution.addon.particles.css">
+   <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
 
    <link rel="icon" type="image/png" href="../images/logos/icono.png">
    <title>CreativosPlus | Conoce más sobre nosotros </title>
 
-   <link rel="canonical" href="https://creativosplus.github.io/Creativos-Plu/Conocenos/nosotros.html"/>
+   <link rel="canonical" href="https://creativosplus.com/Conocenos"/>
 
    <meta property="og:type" content="website"/>
    <meta property="og:description" content=""/>
@@ -112,22 +112,22 @@
                <i class="icon-plus texto-verde" style="font-size: 25px"></i>
             </div>
             <div id="logo">
-               <a href="../index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
-                  <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+               <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
+                  <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                </a>
-               <a href="../index.html" class="retina-logo" data-sticky-logo="../images/logos/logo.png">
-                  <img  src="../images/logos/home.png" alt="CreativosPlus">
+               <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
+                  <img  src="images/logos/home.png" alt="CreativosPlus">
               </a>
             </div>
             <nav id="primary-menu" class="with-arrows clearfix not-dark">
                <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                   <li>
-                     <a href="../index.html">
+                     <a href="index.html">
                         <div>Home</div>
                      </a>
                   </li>
                   <li>
-                     <a href="../Conocenos/nosotros.html">
+                     <a href="nosotros.html">
                         <div>Nosotros</div>
                      </a>
                   </li>
@@ -137,22 +137,22 @@
                      </a>
                      <ul class="colorLink">
                         <li>
-                           <a href="../diseno-web.html">
+                           <a href="diseno-web.html">
                               <div>Diseño Web</div>
                            </a>
                         </li>
                         <li>
-                           <a href="../diseno-grafico.html">
+                           <a href="diseno-grafico.html">
                               <div>Diseño Gráfico</div>
                            </a>
                         </li>
                         <li>
-                           <a href="../marketing.html">
+                           <a href="marketing.html">
                               <div>Marketing Digital</div>
                            </a>
                         </li>
                         <li>
-                           <a href="../seo.html">
+                           <a href="seo.html">
                               <div>SEO</div>
                            </a>
                         </li>
@@ -161,7 +161,7 @@
                </ul>
                <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                   <li>
-                     <a href="../trabajos.html">
+                     <a href="trabajos.html">
                         <div>Trabajos</div>
                      </a>
                   </li>
@@ -176,17 +176,17 @@
                      </a>
                      <ul class="colorLink">
                         <li>
-                           <a href="../index.html">
+                           <a href="index.html">
                               <div>
-                                 <img src="../images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="Español">
+                                 <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="Español">
                                  Español
                               </div>
                            </a>
                         </li>
                         <li>
-                           <a href="../us/index.html">
+                           <a href="us/index.html">
                               <div>
-                                 <img src="../images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="Ingles">
+                                 <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="Ingles">
                                  Ingles
                               </div>
                            </a>
@@ -203,7 +203,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="../images/slider/hello-world.jpg"  alt="Creativosplus"  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="images/slider/hello-world.jpg"  alt="Creativosplus"  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="rs-background-video-layer"
                            data-forcerewind="on"
                            data-volume="mute"
@@ -257,7 +257,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="../images/slider/QUIENESSOMOS.png" alt="Conocenos" data-ww="['900px','900px','900px','900px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/QUIENESSOMOS.png" alt="Conocenos" data-ww="['900px','900px','900px','900px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                            id="slide-240-layer-2"
@@ -362,7 +362,7 @@
                   </a>
                </div>
                <div class="col-lg-6 ">
-                  <img src="../images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Nosotros">
+                  <img src="images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Nosotros">
                </div>
             </div>
             <div class="line"></div>
@@ -418,7 +418,7 @@
             <div class="line"></div>
             <div class="row clearfix">
                <div class="col-lg-6">
-                  <img src="../images/nosotros/2..jpg" style="position: relative; top: 50px; " data-animate="fadeInLeft" data-delay="100" alt="mision">
+                  <img src="images/nosotros/2..jpg" style="position: relative; top: 50px; " data-animate="fadeInLeft" data-delay="100" alt="mision">
                </div>
                <div class="col-lg-6 mt-5">
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
@@ -433,7 +433,7 @@
             </div>
          </div>
       </div>
-      <div class="section nomargin noborder" id="testimonios" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+      <div class="section nomargin noborder" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
                     <h2>Clientes que han confiado en nosotros</h2>
@@ -654,23 +654,23 @@
    </footer>
    <div id="gotoTop" class="icon-angle-up"></div>
 
-   <script src="../js/jquery.js"></script>
-   <script src="../js/plugins.js"></script>
-   <script src="../js/functions.js"></script>
-   <script src="../js/sweetalert2.min.js"></script>
-   <script src="../rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-   <script src="../rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-   <script src="../rs-plugin/js/revolution.addon.particles.min.js"></script>
-   <script src="../rs-plugin/js/revolution.addon.typewriter.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.actions.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.carousel.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.kenburn.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.migration.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.navigation.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.parallax.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.slideanims.min.js"></script>
-   <script src="../rs-plugin/js/revolution.extension.video.min.js"></script>
+   <script src="js/jquery.js"></script>
+   <script src="js/plugins.js"></script>
+   <script src="js/functions.js"></script>
+   <script src="js/sweetalert2.min.js"></script>
+   <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+   <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+   <script src="rs-plugin/js/revolution.addon.particles.min.js"></script>
+   <script src="rs-plugin/js/revolution.addon.typewriter.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.actions.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.carousel.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.kenburn.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.migration.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.navigation.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.parallax.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.slideanims.min.js"></script>
+   <script src="rs-plugin/js/revolution.extension.video.min.js"></script>
    <script>
       var revapi108,
       tpj=jQuery;
@@ -746,7 +746,7 @@
       RsParticlesAddOn(revapi108);
    });
    </script>
-   <script src="../js/main.js"></script>
+   <script src="js/main.js"></script>
 
 </body>
 </html>
