--- a/prueba.html
+++ b/prueba.html
@@ -7,7 +7,7 @@
    <title>Document</title>
    <link rel="stylesheet" href="prueba.css">
 </head>
-<body style="background: rgba(0,0,0, .9)">
-   <img class="logo" src="images/logos/prueba.png" alt="">
+<body class="container">
+   <div class="logopreload"></div>
 </body>
 </html>
